--- a/packages/core/components/shared.scss
+++ b/packages/core/components/shared.scss
@@ -1,3 +1,5 @@
+@import "./styles/animations";
+
 body * {
   font-family: Microsoft Jhenghei, PingFang HK, STHeitiTC-Light, tahoma, arial, sans-serif;
 }
