restructure: stop use monorepo

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,4 +1,4 @@
-@import "./styles/animations";
+@import './animations';
 
 body * {
   font-family: Microsoft Jhenghei, PingFang HK, STHeitiTC-Light, tahoma, arial, sans-serif;
