--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -1,7 +1,7 @@
 .tc-fade-enter {
   opacity: 0;
 
-  &-active {
+  &--active {
     opacity: 1;
     transition: opacity 300ms;
   }
@@ -10,7 +10,7 @@
 .tc-fade-exit {
   opacity: 1;
 
-  &-active {
+  &--active {
     opacity: 0;
     transition: opacity 300ms;
   }
@@ -20,7 +20,7 @@
   opacity: 0;
   transform: translateY(-30px);
 
-  &-active {
+  &--active {
     opacity: 1;
     transform: translateY(0);
     transition: opacity 300ms linear, transform 300ms ease;
@@ -31,7 +31,7 @@
   opacity: 1;
   transform: translateY(0);
 
-  &-active {
+  &--active {
     opacity: 0;
     transform: translateY(-50px);
     transition: opacity 300ms linear, transform 300ms ease;
