--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -1,6 +1,7 @@
 .tc-input {
   border: 0;
   border-bottom: 1px solid #ced2d9;
+  border-radius: 0;
   line-height: 22px;
   width: 100%;
   font-size: 16px;
