--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -9,8 +9,29 @@
 
     box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12);
     background-color: white;
-    padding: 15px;
+    padding: 20px;
     z-index: 100;
+  }
+
+  &__title {
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  &__body,
+  &__footer {
+    margin-top: 10px;
+  }
+
+  &__close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    font-size: 20px;
+    cursor: pointer;
   }
 
   &__overlay {
