--- a/src/components/skeleton/Skeleton.scss
+++ b/src/components/skeleton/Skeleton.scss
@@ -1,4 +1,4 @@
-@keyframes fc-animation-skeleton {
+@keyframes jt-animation-skeleton {
   0% {
     opacity: 0.4;
   }
@@ -10,6 +10,6 @@
   }
 }
 
-.fc-skeleton {
-  animation: 1.5s fc-animation-skeleton infinite ease-in-out;
+.jt-skeleton {
+  animation: 1.5s jt-animation-skeleton infinite ease-in-out;
 }
